Resync with 1.13, GZip is now supported natively, and memory pressure seem improve. Need to check a large hprof to spot next possible optim (if any)